--- a/po/es.po
+++ b/po/es.po
@@ -6,7 +6,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-11-27 17:04+0100\n"
 "PO-Revision-Date: 2020-07-06 20:46+0200\n"
-"Last-Translator: Jose Juan <jzapater@gmail.com>\n"
+"Last-Translator: angelo2807@hotmail.com\n"
 "Language-Team: ANGELODOS  angelo2807@hotmail.com\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
