--- a/po/ca.po
+++ b/po/ca.po
@@ -7,7 +7,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-11-27 17:04+0100\n"
 "PO-Revision-Date: 2020-07-08 18:12+0200\n"
-"Last-Translator: Oriol Pellicer <oriol@elsud.org>\n"
+"Last-Translator: angelodos <angelo2807@hotmail.com>\n"
 "Language-Team: angelodos angelo2807@hotmail.com\n"
 "Language: ca\n"
 "MIME-Version: 1.0\n"
